--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,35 @@ pylint = "*"
 autopep8 = "*"
 
 [packages]
-
+asyncio = "==3.4.3"
+click = "==7.0"
+itsdangerous = "==1.1.0"
+jdcal = "==1.4.1"
+lml = "==0.0.9"
+motor = "==2.0.0"
+numpy = "==1.16.4"
+openpyxl = "==2.5.14"
+pandas = "==0.24.2"
+pyexcel = "==0.5.13"
+pyexcel-io = "==0.5.17"
+pyexcel-webio = "==0.1.4"
+pyexcel-xls = "==0.5.8"
+pyexcel-xlsx = "==0.5.7"
+pymongo = "==3.8.0"
+python-dateutil = "==2.8.0"
+pytz = "==2019.1"
+six = "==1.12.0"
+texttable = "==1.6.1"
+xlrd = "==1.2.0"
+xlwt = "==1.3.0"
+et_xmlfile = "==1.0.1"
+Flask = "==1.0.2"
+Flask-Excel = "==0.0.7"
+Flask-PyMongo = "==2.3.0"
+Jinja2 = "==2.10.1"
+MarkupSafe = "==1.1.1"
+Werkzeug = "==0.15.4"
+XlsxWriter = "==1.1.8"
 
 [requires]
 python_version = "3.7" # mudar
