--- a/Pipfile
+++ b/Pipfile
@@ -38,6 +38,7 @@ MarkupSafe = "==1.1.1"
 Werkzeug = "==0.15.4"
 XlsxWriter = "==1.1.8"
 aiosqlite = "*"
+requests = "*"
 
 [requires]
 python_version = "3.7" # mudar
