--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,8 @@ Werkzeug = "==0.15.4"
 XlsxWriter = "==1.1.8"
 aiosqlite = "*"
 requests = "*"
+psycopg2 = "*"
+asyncpg = "*"
 
 [requires]
 python_version = "3.7" # mudar
